--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.2.6",
+    "msw": "^1.0.0",
     "next": "latest",
+    "postcss": "^8.4.21",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "swr": "^2.0.3",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
