--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
+    "@types/node-fetch": "^2.6.2",
     "@types/react": "18.0.9",
     "@types/testing-library__jest-dom": "5.14.5",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
+    "next-page-tester": "^0.33.0",
     "typescript": "4.6.4"
   }
 }
